# semver-dredd

./: .dockerignore  .gitignore  .semver.yaml  CROSS_LANGUAGE_SNAPSHOTS_PLAN.md  HOWTO.md  IMPLEMENTATION.md  INCLUDE-EXCLUDE-PROPOSAL.md  LICENSE  PLUGIN_ROADMAP.md  README.md  SCHEMA.md  USAGE.md  VERSION  agent.md  baked.yaml  comparison.md  current.yaml  docker-compose.smoke.yml  meta.yaml  pyproject.toml
.github/workflows/: package-install.yml  publish-pypi.yml  smoke.yml
benchmarks/: task-1-easy-bughunt.md  task-2-hard-repo-audit.md
cli/: __init__.py  __main__.py  config.py  languages.py  utils.py
cli/commands/: __init__.py  bake.py  bump.py  compare.py  init.py  patch.py  plugin.py  snapshot.py  status.py  template.py
docker/: Dockerfile.go  Dockerfile.java  Dockerfile.package-install  Dockerfile.python  Dockerfile.unit  README.md  agent.md
docs/: schema.md
example/: __init__.py  agent.md  demo_config_showcase.sh  demo_go.sh  demo_java.sh  demo_python.sh  pygeometry1.py  pygeometry2.py  semver_showcase.yaml
example/go/gogeometry1/: geom.go  go.mod
example/go/gogeometry2/: geom.go  go.mod
example/java/javageometry1/: Geometry.java  Point.java
example/java/javageometry2/: Geometry.java  Point.java
example/pygeometry1/: __init__.py
example/pygeometry2/: __init__.py
example/pygeometry5/: __init__.py
key/: audit.md  bughunting.md
parser/golang/: README.md  go.mod  main.go
parser/java/: README.md  main.java  maven.pom
plans/: 00-pre-1-0-completion-roadmap.md  01-cli-config-resolution.md  02-config-candidates-and-scope-model.md  03-observability-and-traceability.md  04-official-plugin-scope.md  05-plugin-metadata-and-machine-readable-inventory.md  06-bundle-plugin.md  07-documentation-and-release-hardening.md  improve-and-smoke-tests.md
plugins/: agent.md
plugins/go-1.20-dredd/: README.md  agent.md  pyproject.toml
plugins/go-1.20-dredd/semver_dredd_go/: __init__.py  plugin.py
plugins/go-1.20-dredd/semver_dredd_go/parser/: go.mod  main.go
plugins/java-1.8-dredd/: README.md  agent.md  pyproject.toml
plugins/java-1.8-dredd/semver_dredd_java/: plugin.py
plugins/java-1.8-dredd/semver_dredd_java/parser/: main.java
plugins/javaparser-1.8-dredd/: README.md  agent.md  pyproject.toml
plugins/javaparser-1.8-dredd/semver_dredd_javaparser/: __init__.py  plugin.py
plugins/javaparser-1.8-dredd/semver_dredd_javaparser/parser/: Main.java  maven.pom
plugins/python-3.10-dredd/: README.md  agent.md  pyproject.toml
plugins/python-3.10-dredd/semver_dredd_python/: __init__.py  plugin.py
plugins/semver-dredd-all/: README.md  agent.md  pyproject.toml
plugins/semver-dredd-go/: README.md  pyproject.toml
plugins/semver-dredd-go/semver_dredd_go/: plugin.py
plugins/semver-dredd-java/: README.md  agent.md  pyproject.toml
plugins/semver-dredd-java/semver_dredd_java/: __init__.py  plugin.py
plugins/semver-dredd-java/semver_dredd_java/parser/: main.java  maven.pom
plugins/semver-dredd-python/: README.md  pyproject.toml
plugins/semver-dredd-python/semver_dredd_python/: plugin.py
reports/: Answers semver-dredd.md  Claude Opus 4.8 full cache (High, Vertex EU).md  GPT oss 120b.md  Google Gemini 3.1 Pro partial cache (High, Vertex).md  Kimi K2.6 full cache (High, MoonshotAI int4).md  Kimi K2.6 full cache (MoonshotAI int4).md  MiniMax M3 full cache (High, MiniMax fp8).md  OpenAI GPT-5.5 full cache (High, OpenAI).md  Qwen 3.7 Max full cache (Alibaba).md  complete-semver-tool-gap-report.md  include-exclude-status.md  repo-review.md
scripts/: package_install_check.sh  publish_pypi.sh  smoke.sh
scripts/bench/: stash-from-branch.sh
semverdredd/: __init__.py  agent.md  bundle_plugin.py  change_kind.py  diff.py  models.py  plugin_base.py  plugin_manager.py  protocols.py  python_api.py  registry.py  result.py  snapshot.py  snapshot_io.py  version.py  xldiff.py
semverdredd/plugins/: __init__.py  builtin.py  go.py  java.py  python.py
snapshot/: README.md  __init__.py  agent.md  change_kind.py  models.py  protocols.py  registry.py
snapshot/predefined/: __init__.py  models.py
tests/: __init__.py  test_bundle_plugin.py  test_cli.py  test_config.py  test_cross_language.py  test_fields_detection.py  test_go_plugin_scope.py  test_java_plugin_scope.py  test_javaparser_plugin_scope.py  test_pluggable_snapshot_diff.py  test_plugin_manager.py  test_programmatic_api.py  test_python_plugin_scope.py  test_semverdredd.py  test_snapshot.py  test_version.py
tests/fixtures/go/: v1_baseline.yaml  v2_minor.yaml  v3_breaking.yaml
tests/fixtures/go_scope/: root.go
tests/fixtures/go_scope/other/: pkg.go
tests/fixtures/go_scope/sub/: pkg.go
tests/fixtures/go_scope/sub/internal/: pkg.go
tests/fixtures/java/: v1_baseline.yaml  v2_minor.yaml  v3_breaking.yaml
tests/fixtures/java_scope/com/example/api/: Included.java
tests/fixtures/java_scope/com/example/api/internal/: Internal.java
tests/fixtures/java_scope/com/example/other/: Other.java
tests/fixtures/python_scope/scopepkg/: __init__.py  _hidden.py  other.py  pub.py
tests/fixtures/python_scope/scopepkg/nested/: __init__.py  thing.py
tests/fixtures/python_scope/scopepkg_all/: __init__.py
tests/smoke/: assert_config_showcase.sh  assert_demo.sh
