[project]
name = "semver-dredd"
version = "0.1.0"
description = "Automatically increments semver number based on interface changes."
authors = [
    {name = "sr9000",email = "no@mail.org"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
]

[project.scripts]
semver-dredd = "cli:main"

# Plugins are now separate packages. Install them separately:
# - semver-dredd-python
# - semver-dredd-go
# - semver-dredd-java
# Or install all at once with: pip install semver-dredd-all


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pydantic = "^2.0.0"
black = "^26.1.0"
isort = "^8.0.0"

[tool.poetry]
# No bundled parsers - plugins are separate packages
packages = [
    { include = "snapshot" },
    { include = "semverdredd" },
    { include = "cli" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
