[project]
name = "semver-dredd"
version = "1.0.20260704001"
description = "Automatically increments semver number based on interface changes."
authors = [
    {name = "sr9000",email = "no@mail.org"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "PyYAML>=6.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control",
]
keywords = [
    "semantic-versioning",
    "semver",
    "api",
    "versioning",
    "cli",
]

[project.urls]
Homepage = "https://github.com/sr9000/semver-dredd"
Repository = "https://github.com/sr9000/semver-dredd"

[project.scripts]
semver-dredd = "cli:main"

[project.optional-dependencies]
python = ["python-3.10-dredd>=1.1.0"]
go = ["go-1.20-dredd>=1.1.0"]
java = ["java-1.8-dredd>=1.1.0"]
javaparser = ["javaparser-1.8-dredd>=1.0.0"]
all = [
    "python-3.10-dredd>=1.1.0",
    "go-1.20-dredd>=1.1.0",
    "java-1.8-dredd>=1.1.0",
    "javaparser-1.8-dredd>=1.0.0",
]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pydantic = "^2.0.0"
black = "^26.1.0"
isort = "^8.0.0"

[tool.poetry]
# No bundled parsers - plugins are separate packages
packages = [
    { include = "snapshot" },
    { include = "semverdredd" },
    { include = "cli" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]