[project]
name = "java-1.8-dredd"
version = "1.1.0"
description = "Java 1.8+ language plugin for semver-dredd"
authors = [
    {name = "sr9000", email = "no@mail.org"}
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "semver-dredd>=1.0.20260704001",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control",
]
keywords = ["semantic-versioning", "semver", "plugin", "java"]

[project.urls]
Homepage = "https://github.com/sr9000/semver-dredd"
Repository = "https://github.com/sr9000/semver-dredd"

[project.entry-points."semver_dredd.plugins"]
java = "semver_dredd_java:JavaPlugin"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
semver_dredd_java = [
    "parser/*.java",
    "parser/lib/*.jar",
]
