[project]
name = "semver-dredd-all"
version = "1.0.0"
description = "Meta-package that installs semver-dredd with all official language plugins"
authors = [
    {name = "sr9000", email = "no@mail.org"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "semver-dredd>=0.1.0",
    "semver-dredd-python>=1.0.0",
    "semver-dredd-go>=1.0.0",
    "semver-dredd-java>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
