[project]
name = "python-3.10-dredd"
version = "1.1.0"
description = "Python 3.10+ language plugin for semver-dredd"
authors = [
    {name = "sr9000", email = "no@mail.org"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "semver-dredd>=0.1.0",
]

[project.entry-points."semver_dredd.plugins"]
python = "semver_dredd_python:PythonPlugin"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
